# GrantScholarSurvivalKitchen

./: ASSET_GUIDE.md  ASSET_SYSTEM_SUMMARY.md  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  config.py  events.py  game.py  main.py  player.py  pyproject.toml  run_game.bat  scenes.py  setup.py  ui.py
assets/: README.md
assets/fonts/: .gitkeep
assets/images/: .gitkeep
assets/sounds/: .gitkeep
data/: assets.json  config.json  events.json  items.json  recipes.json  stats.json
examples/: asset_example.py
src/: __init__.py  asset_loader.py  backgrounds.py  config.py  data_loader.py  events.py  game.py  player.py  scenes.py  ui.py
