[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grant-scholar-survival-kitchen"
version = "1.0.0"
description = "A survival simulation game built with pygame"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Xander-Lucien"}
]
keywords = ["game", "pygame", "simulation", "survival"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Simulation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pygame>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/Xander-Lucien/GrantScholarSurvivalKitchen"
Repository = "https://github.com/Xander-Lucien/GrantScholarSurvivalKitchen"
"Bug Tracker" = "https://github.com/Xander-Lucien/GrantScholarSurvivalKitchen/issues"

[project.scripts]
grant-scholar = "main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["data/*.json"]
